--- a/options.cfg
+++ b/options.cfg
@@ -1,6 +1,6 @@
 side=ANY
 lang=RUSSIAN
-theme=javax.swing.plaf.metal.MetalLookAndFeel
+theme=com.formdev.flatlaf.FlatIntelliJLaf
 javahome=
 ind=	
 obf=false
